# ncm-dump

./: .gitignore  Cargo.toml  README.md
src/: decoding.rs  file_meta.rs  lib.rs  main.rs  output.rs
src/utils/: mask.rs  mod.rs  read_blob.rs
